[tool.poetry]
name = "emoji-explainer"
version = "0.1.0"
description = "create a single api that takes in an emoji and explains it's meaning. Use groq and llama3 in particular"
authors = ["AutoGPT <info@agpt.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
bcrypt = "*"
fastapi = "^0.65.2"
httpx = "^0.23.0"
prisma = "*"
pydantic = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
